# VA_ImageSource

./: CMakeLists.txt
Assets/Audio/: Master.mixer
Assets/Editor/: AddInvertedMeshColliderEditor.cs  ConvolutionReverbCustomGUI.cs  ISMRenderSettingsGUI.cs
Assets/Materials/: DebugLineMaterial.mat  Material.mat  None.mat  unnamed.mat
Assets/Models/: simple.mtl  speaker.mtl
Assets/Prefabs/: ISM Data.prefab  ISM Room.prefab  ISM Speaker.prefab
Assets/Scenes/: Simple.unity
Assets/Scripts/: AddInvertedMeshCollider.cs  CameraMove.cs  ConvolutionReverbInput.cs  ConvolutionReverbInput.cs~  ISMCollider.cs  ISMDebug.cs  ISMDebugLine.cs  ISMMath.cs  ISMRenderSettings.cs  ISMReverb.cs  ISMReverb.cs~  ISMSync.cs
Native/AirAbsorption/: AirAbsorption.m  CMakeLists.txt  airAbsorptionProxy-Debug.prj  airAbsorptionProxy-Release.prj  airAbsorptionProxy.m  applyAirAbsorption.m  testAirAbsorption.m
Native/AirAbsorption/AirAbsorptionWrapper/: AirAbsorptionWrapper.cpp  AirAbsorptionWrapper.h  CMakeLists.txt
Native/AudioPluginVADemo/: CMakeLists.txt  PluginList.h
ProjectSettings/: ProjectSettings.asset  TagManager.asset
